--- a/src/Package/MainWindow.fxml
+++ b/src/Package/MainWindow.fxml
@@ -3,27 +3,42 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="606.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Package.Main">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="711.0" prefWidth="926.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Package.Main">
    <center>
-      <PieChart fx:id="pieChart" BorderPane.alignment="CENTER" />
+      <PieChart fx:id="pieChart" prefHeight="684.0" prefWidth="833.0" visible="false" BorderPane.alignment="CENTER" />
    </center>
    <top>
    </top>
    <top>
-      <HBox prefHeight="57.0" prefWidth="606.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="67.0" prefWidth="782.0" BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="label" mouseTransparent="true" pickOnBounds="false" prefHeight="30.0" prefWidth="57.0" text="Label" visible="false">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label text="From: ">
+            <Label text="Site :">
+               <HBox.margin>
+                  <Insets right="5.0" top="15.0" />
+               </HBox.margin>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <ChoiceBox fx:id="choiceBox" prefWidth="150.0">
+               <HBox.margin>
+                  <Insets right="10.0" top="15.0" />
+               </HBox.margin>
+            </ChoiceBox>
+            <Label text="From : ">
                <HBox.margin>
                   <Insets right="5.0" top="15.0" />
                </HBox.margin>
@@ -54,6 +69,19 @@
                   <Insets left="35.0" top="15.0" />
                </HBox.margin>
             </Button>
+            <Button mnemonicParsing="false" onAction="#updateData" text="UPDATE" textFill="#0d9700">
+               <HBox.margin>
+                  <Insets left="40.0" top="15.0" />
+               </HBox.margin>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <ProgressIndicator fx:id="progress" progress="0.0" visible="false">
+               <HBox.margin>
+                  <Insets left="15.0" top="15.0" />
+               </HBox.margin>
+            </ProgressIndicator>
          </children>
       </HBox>
    </top>
